# avid-utils

./: README.md  pyproject.toml
avid_utils/: __main__.py  add_primary_keys.py  clean_empty_columns.py  clean_xml.py  cli.py  remove_control_characters.py  remove_duplicate_rows.py  remove_tables.py  search_encoded_db.py  utils.py
