[tool.poetry]
name = "avid-utils"
version = "0.1.2"
description = "Various utilities for archives and SQLite databases"
authors = ["Aarhus Stadsarkiv <stadsarkiv@aarhus.dk>"]

[tool.poetry.dependencies]
python = ">=3.9"
xmltodict = "^0.14.2"
click = "^8.1.7"
orjson = "^3.9.9"

[tool.poetry.scripts]
avid-utils = "avid_utils.cli:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
